fix: add overflow-x and scrollbar width styles to code block

--- a/packages/qwik/src/components/code/elm-code-block.scoped.scss
+++ b/packages/qwik/src/components/code/elm-code-block.scoped.scss
@@ -64,4 +64,6 @@
   grid-area: code;
   box-sizing: border-box;
   padding: 0 1rem;
+  overflow-x: auto;
+  scrollbar-width: thin;
 }
